# NoopScenes

./: .gitignore  .gitmodules  CMakeLists.txt  CONTROLS.md  README.md  editor_state_save.json
src/: camera.h  cstring_ring_buffer.h  file_locations.h  glfw_util.cpp  input.cpp  input.h  keyboard_input_list.inc  main.cpp  model.h  noop_3d_math.h  noop_math.h  noop_scenes.cpp  noop_scenes.h  noop_types.h  portal_scene.cpp  save_file.h  shader_program.h  shader_types_and_constants.h  textures.h  uniform_buffer_object_structs.h  util.h  vertex_attributes.cpp  vertex_attributes.h
src/data/models/: .gitignore  Icosahedron.glb  Mr-Saturn.glb  Octahedron.glb  Paper.glb  Portal-Backing-Plus-Gate-Insignia.glb
src/scenes/: original_scene.json
src/shaders/: DebugColor.frag  Gate.frag  Gate.vert  Portal.frag  Portal.vert  PosNorm.vert  PosNormTex.vert  PosTexVertexShader.glsl  PosVertexShader.glsl  ReflectSkyboxYIsUp.frag  RefractSkyboxYIsUp.frag  SingleColor.frag  SingleColorFragmentShader.glsl  Skybox.frag  Skybox.vert  SkyboxFragmentShader.glsl  SkyboxVertexShader.glsl  SkyboxYIsUp.frag  Tex.frag  TexFragmentShader.glsl
src/testing_ground/: math_tests.h  testing_ground.cpp
src/worlds/: original_world.json  stencil_world_1.json
